# mail-tm-rs

./: Cargo.toml
src/: accounts.rs  domains.rs  http.rs  lib.rs  messages.rs  token.rs
